# CodeGenCXX

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/CodeGenCXX/: CMakeLists.txt  CXXClass.cpp  CXXClass.h  CodeGenCXX.csproj
Source/CodeGenCXX/Source/: Program.cs
Source/Sample/: CMakeLists.txt
Source/Sample/Source/: main.cpp
